# turing_AgentMemory_MCP

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTINUE_HERE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  SUPPORT.md  compose.yaml  lefthook.yml  pyproject.toml
.benchmarks/: agent-quality-20260709T162646Z.json  agent-quality-20260709T164700Z.json  agent-quality-20260709T170152Z.json  backboard-locomo-direct-mcp-smoke.json  benchmark-20260709T134637Z.json  benchmark-20260709T140602Z.json  benchmark-20260709T141512Z.json  benchmark-20260709T144542Z.json  benchmark-20260709T204557Z.json  benchmark-20260709T211840Z.json
.claude/: CLAUDE.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCADEDB-capabilities-for-port.md  ARCHITECTURE.md  FEATURES.md  FUTURE-MILESTONE-retrieval-memory-quality.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/spikes/: .gitignore  CONVENTIONS.md  MANIFEST.md
baseline/03-turingdb/: BASELINE.md  corpus-manifest.json  e2e-results.json  frozen-questions.json  real-document-benchmark.json
baseline/04-arcadedb/: NOTES.md  e2e-results.json
baseline/06-gate/: GATE.md  capture-provider-env.txt  e2e-baseline-corrected.json  e2e-results.json  gate-result.json  real-document-benchmark-run1.json  real-document-benchmark-run2.json  real-document-benchmark-run3.json
docker/: gliner-provider.Dockerfile  llama-provider.Dockerfile  turingdb.Dockerfile
docs/: README.md  architecture.md  configuration.md  deployment.md  limitations.md  mcp-api.md  operations.md  performance.md  security.md
docs/publication/: HACKER_NEWS.md  RELEASE_CHECKLIST.md
scripts/: agent_quality_eval.py  arcadedb_spike.py  benchmark.py  check-file-size.sh  e2e_score.py  eval_backboard_locomo_mcp.py  eval_backboard_locomo_mcp_dataset.py  eval_locomo_answers.py  gate_diff.py  real_document_benchmark.py  real_document_benchmark_scoring.py  run-fast-tests.sh  run-python.sh
scripts/spike/: full_agent_chat.py  native_http_prototype.py  requirements.txt  utcp_roundtrip.py
skills/turing-agentmemory/: README.md  SKILL.md
src/turing_agentmemory_mcp/: __init__.py  admin_repair.py  agent_quality_eval.py  arcadedb_client.py  arcadedb_schema.py  benchmark.py  benchmark_memoryarena.py  benchmark_schema.py  benchmark_stages.py  cli.py  community_detection.py  ids.py  (+55 more)
tests/: _arcadedb_lifecycle_isolation_support.py  _arcadedb_physical_isolation_support.py  _arcadedb_rebuild_fake.py  _batch_memory_shared.py  _documents_arcadedb_shared.py  _gliner_provider_shared.py  _retrieval_arcadedb_shared.py  _store_arcadedb_core_shared.py  conftest.py  test_admin_repair.py  test_agent_quality_eval.py  test_agentmemory_skill.py  test_arcadedb_chaos_restart.py  test_arcadedb_client.py  test_arcadedb_client_transport.py  test_arcadedb_physical_tenant_isolation.py  test_arcadedb_schema.py  test_arcadedb_tenant_isolation.py  test_auth.py  test_backboard_locomo_runner.py  test_batch_memory.py  test_batch_memory_dedup.py  test_batch_memory_write.py  test_benchmark.py  test_ci_hook_wiring.py  test_community_detection.py  test_compose_config.py  test_docker_hardening.py  test_document_file_pipe.py  test_document_ingest_file.py  test_document_job_manager.py  test_document_jobs.py  test_document_processing.py  test_embeddings.py  test_entity_extraction.py  test_entity_extraction_http.py  test_file_size_cap.py  test_fused_memory_search.py  test_gate_artifact_schema.py  test_gate_diff.py  (+45 more)
(+199 files in other folders)
