[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "turing-agentmemory-mcp"
version = "0.1.0"
description = "TuringDB-backed Agent Memory MCP with document ingest and cited retrieval"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Turing AgentMemory MCP Contributors" }]
keywords = ["agent-memory", "mcp", "rag", "turingdb", "vector-search"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "fastmcp>=3.4,<4",
  "graspologic-native==1.3.1",
  "markitdown[pdf,docx,pptx,xlsx]>=0.1.6,<0.2",
  "pypdfium2>=4.30,<5",
  "turingdb==1.35",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.9",
]
gliner = [
  "gliner>=0.2.27",
  "gliner2[local]==1.3.2",
  "gliner2-onnx",
]

[project.scripts]
turing-agentmemory-mcp = "turing_agentmemory_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/chetto1983/turing_AgentMemory_MCP"
Documentation = "https://github.com/chetto1983/turing_AgentMemory_MCP/tree/master/docs"
Issues = "https://github.com/chetto1983/turing_AgentMemory_MCP/issues"
Repository = "https://github.com/chetto1983/turing_AgentMemory_MCP.git"

[tool.hatch.build.targets.wheel]
packages = ["src/turing_agentmemory_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
